docs: added documentation for show opening
